--- a/src/app/financial-reports/financial-reports.html
+++ b/src/app/financial-reports/financial-reports.html
@@ -15,6 +15,10 @@
       <a ui-sref="hm.contactUs" class="btn sell-equ all-btn">Contact Us</a>
     </div>
 		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col contact-us-col toppadding">
+      <div ng-show="fetchDataInProgress">
+        <load-indicator loading="fetchDataInProgress"></load-indicator>
+      </div>
+      <div ng-style="{'visibility': fetchDataInProgress ? 'hidden':'visible'}">
 								<table class="table quotes-table">
                     <thead>
                       <tr>
@@ -24,49 +28,16 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>11/16/2015</td>
-                        <td>Report 1</td>
+                      <tr ng-repeat="release in releases">
+                        <td>{{release.Date}}</td>
+                        <td>{{release.Title}}</td>
                         <td class="text-right">
                           <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-                      </tr>
-                      <tr>
-                        <td>11/16/2015</td>
-                        <td>Report 1</td>
-                        <td class="text-right">
-                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-                      </tr>
-                      <tr>
-                        <td>11/16/2015</td>
-                        <td>Report 1</td>
-                        <td class="text-right">
-                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-                      </tr>
-                      <tr>
-                        <td>11/16/2015</td>
-                        <td>Report 1</td>
-                        <td class="text-right">
-                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-                      </tr>
-                      <tr>
-                        <td>11/16/2015</td>
-                        <td>Report 1</td>
-                        <td class="text-right">
-                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
-                      </tr><tr>
-                        <td>11/16/2015</td>
-                        <td>Report 1</td>
-                        <td class="text-right">
-                          <a   class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
-                          <a   class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a   ng-href="{{release.Download_link}}" target="_blank" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
                       </tr>
                     </tbody>
                   </table>
+        </div>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
       <ul class="list-group user-list-group about-dropdown">
